--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -25,14 +25,14 @@ main {
 }
 
 .cards {
-    height: 300px;
-    width: 300px;
-    max-width: 100%;
-    max-height: 100%;
     display: flex;
     justify-content: flex-start;
     flex-direction: row;
     flex-wrap: wrap;
+}
+
+.cards li {
+    min-width: 330px;
 }
 
 .sidebar {
